--- a/huli-1/index.html
+++ b/huli-1/index.html
@@ -5,9 +5,18 @@
   <link rel="stylesheet" href="src/css/main.css"></link>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="src/js/script.js"></script>
+  <script src="src/js/lang-en.js"></script>
+  <script src="src/js/lang-zh-tw.js"></script>
 </head>
 <body>
   <div class="container">
+    <div class="menu">
+      <h1>用中文直播的頻道</h1>
+    </div>
+    <div class="lang">
+        <a onclick="changeLang('zh-tw')">中文&nbsp&nbsp</a>
+        <a onclick="changeLang('en')">English</a>
+      </div>
     <div class="row">
       
 </body>
