made a bootstrap version of twitch page

--- a/bootstrap_learning/getstarted.html
+++ b/bootstrap_learning/getstarted.html
@@ -17,7 +17,7 @@
       </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin:0px 0;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin:0px;">
         <a class="navbar-brand" href="javascript:void(0)">Logo</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb">
           <span class="navbar-toggler-icon"></span>
@@ -42,8 +42,8 @@
         </div>
       </nav>
 
-<div class="jumbotron" style="margin-bottom:0">
-    <h1>Bootstrap Tutorial</h1> 
+<div class="jumbotron " style="margin-bottom:0">
+    <h1 >TimothySyu's Website</h1> 
     <p>Bootstrap is the most popular HTML, CSS...</p> 
 </div>
 <div id="demo" class="carousel slide" data-ride="carousel">
@@ -108,17 +108,7 @@
 <div class="spinner-border text-secondary"></div>
 <div class="spinner-border text-dark"></div>
 <div class="spinner-border text-light"></div>
-<div class="row">
-    <div class="col-sm-3">.col-sm-3</div>
-    <div class="col-sm-3">.col-sm-3</div>
-    <div class="col-sm-3">.col-sm-3</div>
-    <div class="col-sm-3">.col-sm-3</div>
-  </div>
 
-  <div class="row">
-    <div class="col-sm-4">.col-sm-4</div>
-    <div class="col-sm-8">.col-sm-8</div>
-  </div>
 
   <table class="table table-hover">
     <thead>
