--- a/twitch_v2/huli-2/index.html
+++ b/twitch_v2/huli-2/index.html
@@ -29,6 +29,10 @@
           </ul>
       </div>
   </nav>
+  <div class="carousel_model"></div>
+
+
+
   <div class="deafult-container">
     <div class="row">
       <div class="col-12">
